test/expected/simple-timer.txt
/scripts/simple-timer.js:9
  throw new Error('trace');
  ^

Error: trace
    at Timeout.callback (/scripts/simple-timer.js:9:9)
    at tryOnTimeout (timers.js:224:11)
    at Timer.listOnTimeout (timers.js:198:5)
    at Object.<anonymous> (/scripts/simple-timer.js:8:1)
    at Module._compile (module.js:541:32)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:458:32)
    at tryModuleLoad (module.js:417:12)
    at Function.Module._load (module.js:409:3)
    at Module.runMain (module.js:575:10)
    at run (bootstrap_node.js:340:7)
    at startup (bootstrap_node.js:132:9)
    at bootstrap_node.js:455:3
